--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "license": "MIT",
   "dependencies": {
     "crypto": "^1.0.1",
-    "electron-squirrel-startup": "^1.0.0",
-    "rich-presence-builder": "^0.1.1"
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
