--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vc-electron",
   "productName": "vc-electron",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
@@ -9,7 +9,18 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "dist": "electron-builder"
+  },
+  "build": {
+    "appId": "com.pegasus.vc",
+    "productName": "Pegasus VC",
+    "win": {
+      "target": "nsis"
+    },
+    "directories": {
+      "output": "dist2"
+    }
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -20,16 +31,23 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "30.0.1"
+    "electron": "30.0.1",
+    "electron-builder": "^24.13.3"
   },
   "keywords": [],
   "author": {
     "name": "Dawidooss",
     "email": "94919831+Dawidooss@users.noreply.github.com"
   },
+  "repository": "https://github.com/Dawidooss/VC-Electron",
+  "publish": {
+    "provider": "github",
+    "releaseType": "release"
+  },
   "license": "MIT",
   "dependencies": {
     "crypto": "^1.0.1",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^6.1.8"
   }
 }
