--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Pegasus VC",
   "version": "1.0.0",
   "description": "Pegasus VC",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
