--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "pegasus-vc",
+  "author": {
+    "name": "Dawidooss",
+    "url": "https://pegasus.bot"
+  },
   "productName": "Pegasus VC",
   "version": "1.0.0",
   "description": "Pegasus VC",
@@ -8,9 +12,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\"",
-    "build-installer": "electron-builder"
+    "publish": "electron-forge publish"
   },
   "build": {
     "appId": "input-overlay-electron",
@@ -63,11 +65,14 @@
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.54",
-    "@electron-forge/maker-deb": "^6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-    "@electron-forge/maker-zip": "^6.0.0-beta.54",
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
     "electron": "^15.0.0",
     "electron-builder": "^22.9.1"
   },
