--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "publish": "electron-forge publish"
   },
   "build": {
-    "appId": "input-overlay-electron",
+    "appId": "vc-electron",
     "win": {
       "target": [
         "nsis"
       ],
-      "icon": "icons/pegasus.ico",
-      "requestedExecutionLevel": "requireAdministrator"
+      "icon": "icons/pegasus.ico"
     },
     "nsis": {
       "installerIcon": "icons/pegasus.ico",
@@ -35,7 +34,9 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "/icons/pegasus.ico"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
@@ -62,7 +63,10 @@
   },
   "dependencies": {
     "electron-iohook": "^0.1.2",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "fetch": "^1.1.0",
+    "make-fetch-happen": "^13.0.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
