--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "electron-squirrel-startup": "^1.0.0",
     "fetch": "^1.1.0",
     "make-fetch-happen": "^13.0.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "rich-presence-builder": "^0.1.1",
+    "express": "^3.19.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
